   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
       - Fixed Redirector when the targer URI is on a distinct domain.
         Reported by Guido Schmidt.
       - Fixed potential issue in ClientResource regarding the actual
         entity being resent in case of error.
    - Misc
       - Clarified default property values of the TunnelService class.
         
- 2.0.5 (2011-02-09)
    - Bugs fixed
       - Fixed bug in virtual host router that was failing if no host 
         URI was set. Now falls back to the host part of the resource URI.
       - Fixed handling of "EDM Single" properties.
         Reported by Andreas Taube.  
       - Fixed ClientResource#put(Object,MediaType) and 
         #post(Object,MediaType) methods of the GWT edition.
         Reported by Charlie Mason.
       - Fixed bug causing first entity byte to be eaten if the connection
         wasn't persisting. Reported by Sebastien Gaide and Olivier Miel. 
       - Fixed potential NPE with conditional requests.
         Reported by Carolyn Duby.
       - Fixed potential race issues in internal HTTP connector under high
         load. Reported by Leandro Oliveira.
       - Fixed bug with AWS S3 authentication due to wrong insertion of
         HTTP headers. Reported by Sebastien Gaide.
       - The GWT proxies generated at compilation time weren't setting 
         their preference for the GWT object serialization format.
       
 
- 2.0.4 (2010-12-24)
    - Bugs fixed
	   - Extension headers on responses were now supported by the
	     JAX-RS extension. Reported by Jim Stabile and fix suggested
	     by Simon Temple.
	   - Invalid log traces for connectors without protocols, such as
	     dispatchers, were removed.
	   - Fixed AccessControlException caused by an unnecessary call to
	     System.getProperties(). Reported by Matthias Reichl.
       - The JAXB extension now has better support for classloader.
         Contributed by Eric Hough.